Slår av Sonar midlertidig.